# lexic

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agents/: arguments.py  considerations.py  factual_record.py  initial_analysis.py  investigation_order.py  legal_bases.py  pipeline.py  qualification.py  recommendations.py
evals/: __init__.py  orchestrator.py
evals/judges/: judge.py  rubrics.py
prompts/agents/: initial_analysis.yaml  investigation_order.yaml  legal_bases.yaml  recommendations.yaml
prompts/evals/rubrics/: initial_analysis.yaml  recommendations.yaml
prompts/generation/: client_persona.yaml  recommendations.yaml  situation.yaml
scripts/: 01_extract_decisions.py  02_generate_synthetic.py  03_run_eval.py  04_run_pipeline.py
shared/: config.py  io.py  prompts.py
src/lexic/agents/: __init__.py  arguments.py  considerations.py  factual_record.py  initial_analysis.py  investigation_order.py  investigation_report.py  judgment.py  legal_bases.py  legal_basis.py  pipeline.py  qualification.py  recommendations.py
src/lexic/evals/: orchestrator.py
src/lexic/evals/judges/: __init__.py  judge.py  rubrics.py
src/lexic/prompts/agents/: arguments.yaml  considerations.yaml  factual_record.yaml  initial_analysis.yaml  investigation_order.yaml  investigation_report.yaml  (+4 more)
src/lexic/shared/: __init__.py  config.py  io.py  models.py  prompts.py
src/lexic/synthetic_data/: extract.py  generate.py
synthetic_data/: __init__.py  extract.py  generate.py
tests/: __init__.py
(+24 files in other folders)
